fixed issues with cropping of large text items on hoverable captions

--- a/styles/sass/_content.scss
+++ b/styles/sass/_content.scss
@@ -65,14 +65,12 @@
     width: 100%;
   }
   img {
-    width: 100%;
     height: fit-content;
     height: 425px;
     flex-wrap: nowrap;
     display: block;
     z-index:1;
     @include mobile {
-      width: 200%;
       transform: translate(-33.3333%, 0);
       flex-flow: row wrap;
       min-width: 0px;
@@ -85,7 +83,8 @@
 .caption {
   display: block;
   position: absolute;
-  bottom: 0;
+  padding: 5px;
+  bottom: -10px;
   left: 0;
   right: 0;
   text-align: center;
@@ -107,7 +106,7 @@
 .words {
   margin-top: 20px;
   width: 100%;
-  height: 190px;
+  height: auto;
   display: flexbox;
   flex-direction: column;
   justify-content: flex-start;
@@ -140,11 +139,11 @@
 }
 
 words:hover .caption{
-  height: 25%;
+  height: auto;
 }
 
 .art-container:hover .caption{
-  height: 25%;
+  height: auto;
 }
 
 
